# petab_test_suite

./: .ci_pip_reqs.txt  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  cases  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci_tests.yml  deploy.yml
cases/0001/: 0001.md  0001.py  0001_solution.yaml  _0001_solution.yaml  _conditions.tsv  _measurements.tsv  _parameters.tsv  _simulations.tsv  conditions.tsv  observables.tsv  parameters.tsv
cases/0002/: 0002.md  0002.py
cases/0003/: 0003.md  0003.py
cases/0004/: 0004.md  0004.py  _measurements.tsv  _simulations.tsv
cases/0005/: 0005.md  0005.py
cases/0006/: 0006.py  _0006_solution.yaml  _simulations.tsv
cases/0007/: 0006.md  0007.md
cases/0008/: 0007.md  0008.py
cases/0009/: 0009.py
cases/0010/: 0010.md  0010.py  _conditions.tsv  _parameters.tsv
cases/0011/: 0011.md  0011.py  _0011_solution.yaml  _conditions.tsv  _simulations.tsv
cases/0012/: 0012.py  _0012_solution.yaml  _parameters.tsv  _simulations.tsv
cases/0013/: 0013.md  0013.py
cases/0014/: 0014.md  0014.py
cases/0016/: 0016.md  0016.py  _0016_solution.yaml
cases/0017/: 0017.md  0017.py  _0017_solution.yaml  _measurements.tsv  _observables.tsv  _parameters.tsv  _simulations.tsv
cases/pysb/0004/: _model.py
cases/pysb/0010/: _model.py
cases/pysb/0015/: _0015.yaml
petabtests/: C.py  __init__.py  antimony.py  conversion.xml  conversion_pysb.py  core.py  evaluate.py  file.py  model.py  version.py
petabtests/cases/0001/: 0001.py
petabtests/cases/0002/: 0002.py
petabtests/cases/0003/: 0003.py
petabtests/cases/0004/: 0004.py
petabtests/cases/0005/: 0005.py
petabtests/cases/0006/: 0006.py
petabtests/cases/0007/: 0007.py
petabtests/cases/0008/: 0008.py
petabtests/cases/0009/: 0009.py
petabtests/cases/0010/: 0010.py
petabtests/cases/0011/: 0011.py
petabtests/cases/0012/: 0012.py
petabtests/cases/0013/: 0013.py
petabtests/cases/0014/: 0014.py
petabtests/cases/0015/: 0015.py
petabtests/cases/0016/: 0016.py
petabtests/cases/0017/: 0017.md  0017.py  _0017_solution.yaml
petabtests/cases/0018/: 0018.md  0018.py  _model.xml
petabtests/cases/pysb/: toc.md
petabtests/cases/pysb/0001/: 0001.py
petabtests/cases/pysb/0009/: 0009.py
petabtests/cases/pysb/0010/: 0010.md  0010.py  _0010_solution.yaml
petabtests/cases/pysb/0011/: 0011.py
petabtests/cases/pysb/0012/: 0012.py
petabtests/cases/pysb/0013/: 0013.py
petabtests/cases/pysb/0016/: 0016.md
petabtests/cases/pysb/0017/: 0017.py  _0017_solution.yaml  _conditions.tsv  _simulations.tsv
petabtests/cases/v1.0.0/sbml/: README.md
petabtests/cases/v2.0.0/: README.md
petabtests/cases/v2.0.0/0012/: 0012.py
petabtests/cases/v2.0.0/0013/: 0013.py
test/: test_antimony.py  test_evaluate.py  test_general.py  test_generate.py
(+305 files in other folders)
